--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@
         header {
             text-align: center;
             padding: 20px;
-            background-color: #2c3e50;
+            background-color: #367787;
             color: #ecf0f1;
         }
 
         nav {
-            background-color: #34495e;
+            background-color: #275886
             overflow: hidden;
         }
 
@@ -85,7 +85,7 @@
         footer {
             text-align: center;
             padding: 20px;
-            background-color: #2c3e50;
+            background-color: #367787;
             color: #ecf0f1;
         }
 .Instagram{
