--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
         }
 
         nav {
-            background-color: #275886
+            background-color: #13191F
             overflow: hidden;
         }
 
