--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
         nav {
             background-color: #13191F
-            overflow:hidden;
+            overflow:visible;
         }
 
         nav a {
